<resources>
    <string name="app_name">AnimalCare</string>
    <string name="action_settings">Settings</string>
    <string name="button_enter">ENTRAR</string>
    <string name="edit_text_password">Senha</string>
    <string name="edit_text_email">E-mail</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_new_animal">NewAnimalActivity</string>
    <string name="new_animal_button_save_description">SALVAR</string>
    <string name="new_animal_edit_text_birthday">Nascimento</string>
    <string name="new_animal_edit_text_breed">Raça</string>
    <string name="new_animal_edit_text_name">Nome</string>
    <string name="new_animal_edit_text_touch_in_image_view_to_send">Toque aqui para enviar</string>
    <string name="title_activity_my_animals_detail">MyAnimalsDetailActivity</string>
    <string name="new_animal_edit_text_name_error">Precisamos saber o nome do seu animal</string>
    <string name="new_animal_breed_text_name_error">Precisamos saber a raça do seu animal</string>

    <string name="log_in_error_message_is_empty_email">Precisamos saber o seu email</string>
    <string name="log_in_error_message_invalid_email">Esse email não parece ser válido</string>
    <string name="log_in_error_message_is_empty_password">Precisamos de sua senha</string>
    <string name="log_in_error_message_invalid_credentials">Email e/ou senha não são válidos</string>

    <string name="sign_up_error_message_is_empty_name">Precisamos saber o seu nome</string>
    <string name="sign_up_error_message_invalid_email">Esse email não parece ser válido</string>
    <string name="sign_up_error_message_is_empty_email">Precisamos saber o seu email</string>
    <string name="sign_up_error_message_is_empty_password">Precisamos de sua senha</string>
    <string name="sign_up_error_message_is_empty_confirm_password">Precisamos que digite novamente sua senha</string>
    <string name="sign_up_error_message_does_not_match_password">Senha não confere</string>


    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="activity_log_in_text_view_sign_up">Novo por aqui ? Regisre-se</string>
    <string name="splash_screen_loading_step_zero">Carregando</string>
    <string name="splash_screen_loading_step_one">Carregando.</string>
    <string name="splash_screen_loading_step_two">Carregando..</string>
    <string name="splash_screen_loading_step_three">Carregando...</string>


    <string name="settings_menu_account">Minha conta</string>
    <string name="settings_menu_address">Endereço</string>
    <string name="settings_menu_care">Adote um amigo</string>
    <string name="settings_menu_payments">Planos e pagamentos</string>
    <string name="settings_menu_rating">Minhas avaliações</string>
    <string name="settings_menu_instructions">Instruções</string>


    <string name="messages_pager_adapter_chat">Chat</string>
    <string name="messages_pager_adapter_notifications">Avisos</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_plans_payments">PlansPaymentsActivity</string>
    <string name="title_activity_evaluation">EvaluationActivity</string>
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="title_activity_friend_care">FriendCareActivity</string>


    <string name="my_naimal_details_settings_menu_vaccination_card">Carteira de vacinação</string>
    <string name="my_naimal_details_settings_menu_medicines">Medicamentos</string>
    <string name="my_naimal_details_settings_menu_events">Eventos</string>
    <string name="my_naimal_details_settings_menu_query">Consultas</string>
    <string name="title_activity_queries">QueriesActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_vaccination_card">VaccinationCardActivity</string>
    <string name="title_activity_animals_data_details">AnimalsDataDetailsActivity</string>
    <string name="fragment_my_animals_not_found_animals_list">Nenhum animal encontrado</string>
    <string name="my_animal_not_found_data">Nenhum registro encontrado.</string>


</resources>
