<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"/>


    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"/>


        <TextView
            android:layout_marginTop="-15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AnimalCare"/>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="-40dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_user"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextEmail"
                android:inputType="textEmailAddress"
                app:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingStart="45dp"
                android:hint="@string/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout

            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_marginBottom="2dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="-40dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_lock"/>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                app:backgroundTint="@color/white"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:paddingStart="45dp"
                android:hint="@string/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/buttonLogin"
        android:layout_alignParentBottom="true"
        android:text="@string/button_enter"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"/>


</RelativeLayout>
